# rm_power_rune

./: .clang-format  CMakeLists.txt  LICENSE  README.md  config.yaml  main.cpp
include/: Calculator.h  Detector.h  Param.h  PowerRune.h  Utility.h
src/: Calculate.cpp  Detect.cpp  Param.cpp  PowerRune.cpp
