cmake_minimum_required(VERSION 3.5)
set(CMAKE_CXX_STANDARD 17)
project(power_rune)

set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)

if (NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release)
endif()

set(CMAKE_CXX_FLAGS_RELEASE "-Ofast -DNDEBUG -flto -march=native")
set(CMAKE_CXX_FLAGS_DEBUG "-g -O0 -DDEBUG -Wall -Wextra")

find_package(OpenCV REQUIRED)
find_package(Ceres REQUIRED)

include_directories(
    ${CERES_INCLUDE_DIRS}
    ${EIGEN3_INCLUDE_DIR}
    include
)

aux_source_directory(src SRC)

add_executable(power_rune main.cpp ${SRC})
target_link_libraries(
    power_rune 
    ${OpenCV_LIBS}
    ${CERES_LIBRARIES}
)
